--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
     transform: translate(-50%, -50%);
     border-radius: 10px;
     padding: 15px;
+    box-shadow: 6px 6px 6px 6px rgb(51, 50, 50)
 }
 
 button{
@@ -27,6 +28,8 @@ button{
     border: none;
     color: white;
     margin: 1px;
+    box-shadow: 0 3px 3px 1px rgb(64, 63, 63);
+
 }
 
 button:hover{
@@ -51,5 +54,7 @@ button:hover{
     padding: 2px;
     border-radius: 5px;
     font-size: 25px;
+    box-shadow: 0 0 6px 5px rgb(64, 63, 63);
+
 }
 
